--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
   </div>
 
   <script>
-    const jpdbBaseURL = "https://api.login2explore.com:5577";
+    const jpdbBaseURL = "http://api.login2explore.com:5577";
     const jpdbIRL = "/api/irl";
     const jpdbIML = "/api/iml";
     const dbName = "EMPLOYEE-DB";
